# chess-engine

./: CMakeLists.txt
src/: Board.cpp  Board.hpp  Move.hpp  MoveGenerator.cpp  MoveGenerator.hpp  Types.hpp  main.cpp
src/bot/: Evaluation.cpp  Evaluation.hpp  PieceSquareTables.hpp  Search.cpp  Search.hpp
src/core/: Board.cpp  Board.hpp  GameController.cpp  GameController.hpp  Move.hpp  MoveGenerator.cpp  MoveGenerator.hpp  MoveList.hpp  MoveTables.cpp  MoveTables.hpp  Perft.cpp  Perft.hpp  Types.hpp
